--- a/css/style.css
+++ b/css/style.css
@@ -3,35 +3,33 @@
     box-sizing: border-box;
 }
 
-div {
-    display: inline-block;
-}
-
 .photo {
     width: 250px;
+    border: 10px outset black;
+    margin: 20px 60px 0px;
 }
 
 .photoCat {
     width: 300px;
+    position: relative;
+    bottom: 135px;
+    margin: 60px 60px 0px 70px;
     border: 10px solid white;
     border-radius: 25px;
 }
 
-.photoBlock {
-    position: relative;
-    width: 270px;
-    border: 10px outset black;
-    height: 458px;
-}
-
 .aboutMe {
-    width: 400px;
-    background-color: aliceblue;
+    position: absolute;
+    top: 270px;
+    left: 345px;
+    margin: 60px;
     padding: 30px;
-    margin: 20px;
+    display: inline-block;
+    width: 400px;
     border: solid;
     border-radius: 25px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: aliceblue;
+    font-family: Roboto;
     font-size: 15px;
 }
 
